feat: add display_name property to multiple manifest files for localization support (#1003)

--- a/packages/core_addon_loaders/python_addon_loader/manifest.json
+++ b/packages/core_addon_loaders/python_addon_loader/manifest.json
@@ -2,6 +2,13 @@
   "type": "addon_loader",
   "name": "python_addon_loader",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "Python Addon Loader",
+    "zh-CN": "Python 插件加载器",
+    "zh-TW": "Python 外掛載入器",
+    "ja-JP": "Python アドオンローダー",
+    "ko-KR": "Python 애드온 로더"
+  },
   "description": {
     "en-US": "TEN Framework addon loader for Python runtime support",
     "zh-CN": "TEN Framework 的 Python 运行时支持插件加载器",
