--- a/packages/example_extensions/simple_echo_python/manifest.json
+++ b/packages/example_extensions/simple_echo_python/manifest.json
@@ -2,10 +2,17 @@
   "type": "extension",
   "name": "simple_echo_python",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "Simple Echo Python Extension",
+    "zh-CN": "简单回声 Python 扩展",
+    "zh-TW": "簡單回聲 Python 擴充",
+    "ja-JP": "シンプルエコー Python 拡張",
+    "ko-KR": "간단한 에코 Python 확장"
+  },
   "description": {
     "en-US": "Simple echo extension example written in Python for TEN Framework",
-    "zh-CN": "使用 Python 语言编写的 TEN Framework 简单回音扩展示例",
-    "zh-TW": "使用 Python 語言編寫的 TEN Framework 簡單回音擴充範例",
+    "zh-CN": "使用 Python 语言编写的 TEN Framework 简单回声扩展示例",
+    "zh-TW": "使用 Python 語言編寫的 TEN Framework 簡單回聲擴充範例",
     "ja-JP": "TEN Framework用のPythonで書かれたシンプルなエコー拡張サンプル",
     "ko-KR": "TEN Framework용 Python으로 작성된 간단한 에코 확장 예제"
   },
