--- a/packages/core_addon_loaders/nodejs_addon_loader/manifest.json
+++ b/packages/core_addon_loaders/nodejs_addon_loader/manifest.json
@@ -2,6 +2,13 @@
   "type": "addon_loader",
   "name": "nodejs_addon_loader",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "Node.js Addon Loader",
+    "zh-CN": "Node.js 插件加载器",
+    "zh-TW": "Node.js 外掛載入器",
+    "ja-JP": "Node.js アドオンローダー",
+    "ko-KR": "Node.js 애드온 로더"
+  },
   "description": {
     "en-US": "TEN Framework addon loader for Node.js runtime support",
     "zh-CN": "TEN Framework 的 Node.js 运行时支持插件加载器",
