--- a/packages/core_apps/default_app_go/manifest.json
+++ b/packages/core_apps/default_app_go/manifest.json
@@ -2,11 +2,18 @@
   "type": "app",
   "name": "default_app_go",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "Default Go App",
+    "zh-CN": "默认 Go 应用",
+    "zh-TW": "預設 Go 應用程式",
+    "ja-JP": "デフォルト Go アプリ",
+    "ko-KR": "기본 Go 앱"
+  },
   "description": {
     "en-US": "Default TEN Framework application template written in Go",
     "zh-CN": "使用 Go 语言编写的默认 TEN Framework 应用模板",
     "zh-TW": "使用 Go 語言編寫的預設 TEN Framework 應用程式模板",
-    "ja-JP": "Go言語で書かれたデフォルトのTEN Frameworkアプリケーションテンプレート",
+    "ja-JP": "Goで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート",
     "ko-KR": "Go로 작성된 기본 TEN Framework 애플리케이션 템플릿"
   },
   "tags": [
