--- a/packages/core_apps/default_app_nodejs/manifest.json
+++ b/packages/core_apps/default_app_nodejs/manifest.json
@@ -2,6 +2,13 @@
   "type": "app",
   "name": "default_app_nodejs",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "Default Node.js App",
+    "zh-CN": "默认 Node.js 应用",
+    "zh-TW": "預設 Node.js 應用程式",
+    "ja-JP": "デフォルト Node.js アプリ",
+    "ko-KR": "기본 Node.js 앱"
+  },
   "description": {
     "en-US": "Default TEN Framework application template written in Node.js",
     "zh-CN": "使用 Node.js 语言编写的默认 TEN Framework 应用模板",
