--- a/packages/core_extensions/default_extension_cpp/manifest.json
+++ b/packages/core_extensions/default_extension_cpp/manifest.json
@@ -2,6 +2,13 @@
   "type": "extension",
   "name": "default_extension_cpp",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "Default C++ Extension",
+    "zh-CN": "默认 C++ 扩展",
+    "zh-TW": "預設 C++ 擴充",
+    "ja-JP": "デフォルト C++ 拡張",
+    "ko-KR": "기본 C++ 확장"
+  },
   "description": {
     "en-US": "Default TEN Framework extension template written in C++",
     "zh-CN": "使用 C++ 语言编写的默认 TEN Framework 扩展模板",
@@ -33,9 +40,9 @@
       ".vscode/**"
     ]
   },
-  "api": {},
   "scripts": {
     "test": "python3 tools/run_script.py test",
     "build": "python3 tools/run_script.py build"
-  }
+  },
+  "api": {}
 }
