--- a/packages/example_extensions/ffmpeg_demuxer/manifest.json
+++ b/packages/example_extensions/ffmpeg_demuxer/manifest.json
@@ -2,12 +2,19 @@
   "type": "extension",
   "name": "ffmpeg_demuxer",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "FFmpeg Demuxer Extension",
+    "zh-CN": "FFmpeg 解复用器扩展",
+    "zh-TW": "FFmpeg 解多工器擴充",
+    "ja-JP": "FFmpeg デマルチプレクサ拡張",
+    "ko-KR": "FFmpeg 디먹서 확장"
+  },
   "description": {
-    "en-US": "FFmpeg demuxer extension example written in C++ for TEN Framework",
-    "zh-CN": "使用 C++ 语言编写的 TEN Framework FFmpeg 解复用器扩展示例",
-    "zh-TW": "使用 C++ 語言編寫的 TEN Framework FFmpeg 解多工器擴充範例",
-    "ja-JP": "TEN Framework用のC++で書かれたFFmpegデマルチプレクサー拡張サンプル",
-    "ko-KR": "TEN Framework용 C++로 작성된 FFmpeg 디먹서 확장 예제"
+    "en-US": "FFmpeg demuxer extension for media stream separation in TEN Framework",
+    "zh-CN": "TEN Framework 中用于媒体流分离的 FFmpeg 解复用器扩展",
+    "zh-TW": "TEN Framework 中用於媒體串流分離的 FFmpeg 解多工器擴充",
+    "ja-JP": "TEN Frameworkでのメディアストリーム分離用FFmpegデマルチプレクサ拡張",
+    "ko-KR": "TEN Framework의 미디어 스트림 분리를 위한 FFmpeg 디먹서 확장"
   },
   "tags": [
     "cpp"
