--- a/packages/example_extensions/simple_http_server_go/manifest.json
+++ b/packages/example_extensions/simple_http_server_go/manifest.json
@@ -2,6 +2,13 @@
   "type": "extension",
   "name": "simple_http_server_go",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "Simple HTTP Server Go Extension",
+    "zh-CN": "简单 HTTP 服务器 Go 扩展",
+    "zh-TW": "簡單 HTTP 伺服器 Go 擴充",
+    "ja-JP": "シンプル HTTP サーバー Go 拡張",
+    "ko-KR": "간단한 HTTP 서버 Go 확장"
+  },
   "description": {
     "en-US": "Simple HTTP server extension example written in Go for TEN Framework",
     "zh-CN": "使用 Go 语言编写的 TEN Framework 简单 HTTP 服务器扩展示例",
