--- a/packages/example_extensions/vosk_asr_cpp/manifest.json
+++ b/packages/example_extensions/vosk_asr_cpp/manifest.json
@@ -2,12 +2,19 @@
   "type": "extension",
   "name": "vosk_asr_cpp",
   "version": "0.10.15",
+  "display_name": {
+    "en-US": "Vosk ASR C++ Extension",
+    "zh-CN": "Vosk 语音识别 C++ 扩展",
+    "zh-TW": "Vosk 語音識別 C++ 擴充",
+    "ja-JP": "Vosk ASR C++ 拡張",
+    "ko-KR": "Vosk ASR C++ 확장"
+  },
   "description": {
-    "en-US": "Vosk automatic speech recognition (ASR) extension example written in C++ for TEN Framework",
-    "zh-CN": "使用 C++ 语言编写的 TEN Framework Vosk 自动语音识别（ASR）扩展示例",
-    "zh-TW": "使用 C++ 語言編寫的 TEN Framework Vosk 自動語音識別（ASR）擴充範例",
-    "ja-JP": "TEN Framework用のC++で書かれたVosk自動音声認識（ASR）拡張サンプル",
-    "ko-KR": "TEN Framework용 C++로 작성된 Vosk 자동 음성 인식(ASR) 확장 예제"
+    "en-US": "Vosk automatic speech recognition extension written in C++ for TEN Framework",
+    "zh-CN": "使用 C++ 语言编写的 TEN Framework Vosk 自动语音识别扩展",
+    "zh-TW": "使用 C++ 語言編寫的 TEN Framework Vosk 自動語音識別擴充",
+    "ja-JP": "TEN Framework用のC++で書かれたVosk自動音声認識拡張",
+    "ko-KR": "TEN Framework용 C++로 작성된 Vosk 자동 음성 인식 확장"
   },
   "tags": [
     "cpp"
@@ -29,9 +36,9 @@
       "**"
     ]
   },
-  "api": {},
   "scripts": {
     "test": "bin/vosk_asr_cpp_test",
     "build": "sh -c cd .ten/app && tgn gen linux x64 debug -- ten_enable_standalone_test=true && tgn build linux x64 debug"
-  }
+  },
+  "api": {}
 }
