--- a/packages/core_extensions/default_extension_cpp/manifest.json
+++ b/packages/core_extensions/default_extension_cpp/manifest.json
@@ -3,18 +3,42 @@
   "name": "default_extension_cpp",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Default C++ Extension",
-    "zh-CN": "默认 C++ 扩展",
-    "zh-TW": "預設 C++ 擴充",
-    "ja-JP": "デフォルト C++ 拡張",
-    "ko-KR": "기본 C++ 확장"
+    "locales": {
+      "en-US": {
+        "content": "Default C++ Extension"
+      },
+      "zh-CN": {
+        "content": "默认 C++ 扩展"
+      },
+      "zh-TW": {
+        "content": "預設 C++ 擴充"
+      },
+      "ja-JP": {
+        "content": "デフォルト C++ 拡張"
+      },
+      "ko-KR": {
+        "content": "기본 C++ 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "Default TEN Framework extension template written in C++",
-    "zh-CN": "使用 C++ 语言编写的默认 TEN Framework 扩展模板",
-    "zh-TW": "使用 C++ 語言編寫的預設 TEN Framework 擴充模板",
-    "ja-JP": "C++で書かれたデフォルトのTEN Framework拡張テンプレート",
-    "ko-KR": "C++로 작성된 기본 TEN Framework 확장 템플릿"
+    "locales": {
+      "en-US": {
+        "content": "Default TEN Framework extension template written in C++"
+      },
+      "zh-CN": {
+        "content": "使用 C++ 语言编写的默认 TEN Framework 扩展模板"
+      },
+      "zh-TW": {
+        "content": "使用 C++ 語言編寫的預設 TEN Framework 擴充模板"
+      },
+      "ja-JP": {
+        "content": "C++で書かれたデフォルトのTEN Framework拡張テンプレート"
+      },
+      "ko-KR": {
+        "content": "C++로 작성된 기본 TEN Framework 확장 템플릿"
+      }
+    }
   },
   "tags": [
     "cpp",
