--- a/packages/core_protocols/msgpack/manifest.json
+++ b/packages/core_protocols/msgpack/manifest.json
@@ -3,18 +3,42 @@
   "name": "msgpack",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "MessagePack Protocol",
-    "zh-CN": "MessagePack 协议",
-    "zh-TW": "MessagePack 協定",
-    "ja-JP": "MessagePack プロトコル",
-    "ko-KR": "MessagePack 프로토콜"
+    "locales": {
+      "en-US": {
+        "content": "MessagePack Protocol"
+      },
+      "zh-CN": {
+        "content": "MessagePack 协议"
+      },
+      "zh-TW": {
+        "content": "MessagePack 協定"
+      },
+      "ja-JP": {
+        "content": "MessagePack プロトコル"
+      },
+      "ko-KR": {
+        "content": "MessagePack 프로토콜"
+      }
+    }
   },
   "description": {
-    "en-US": "MessagePack protocol implementation for efficient binary serialization",
-    "zh-CN": "用于高效二进制序列化的 MessagePack 协议实现",
-    "zh-TW": "用於高效二進位序列化的 MessagePack 協定實作",
-    "ja-JP": "効率的なバイナリシリアライゼーション用のMessagePackプロトコル実装",
-    "ko-KR": "효율적인 바이너리 직렬화를 위한 MessagePack 프로토콜 구현"
+    "locales": {
+      "en-US": {
+        "content": "MessagePack protocol implementation for efficient binary serialization"
+      },
+      "zh-CN": {
+        "content": "用于高效二进制序列化的 MessagePack 协议实现"
+      },
+      "zh-TW": {
+        "content": "用於高效二進位序列化的 MessagePack 協定實作"
+      },
+      "ja-JP": {
+        "content": "効率的なバイナリシリアライゼーション用のMessagePackプロトコル実装"
+      },
+      "ko-KR": {
+        "content": "효율적인 바이너리 직렬화를 위한 MessagePack 프로토콜 구현"
+      }
+    }
   },
   "dependencies": []
 }
