--- a/packages/example_extensions/ffmpeg_demuxer/manifest.json
+++ b/packages/example_extensions/ffmpeg_demuxer/manifest.json
@@ -3,18 +3,42 @@
   "name": "ffmpeg_demuxer",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "FFmpeg Demuxer Extension",
-    "zh-CN": "FFmpeg 解复用器扩展",
-    "zh-TW": "FFmpeg 解多工器擴充",
-    "ja-JP": "FFmpeg デマルチプレクサ拡張",
-    "ko-KR": "FFmpeg 디먹서 확장"
+    "locales": {
+      "en-US": {
+        "content": "FFmpeg Demuxer Extension"
+      },
+      "zh-CN": {
+        "content": "FFmpeg 解复用器扩展"
+      },
+      "zh-TW": {
+        "content": "FFmpeg 解多工器擴充"
+      },
+      "ja-JP": {
+        "content": "FFmpeg デマルチプレクサ拡張"
+      },
+      "ko-KR": {
+        "content": "FFmpeg 디먹서 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "FFmpeg demuxer extension for media stream separation in TEN Framework",
-    "zh-CN": "TEN Framework 中用于媒体流分离的 FFmpeg 解复用器扩展",
-    "zh-TW": "TEN Framework 中用於媒體串流分離的 FFmpeg 解多工器擴充",
-    "ja-JP": "TEN Frameworkでのメディアストリーム分離用FFmpegデマルチプレクサ拡張",
-    "ko-KR": "TEN Framework의 미디어 스트림 분리를 위한 FFmpeg 디먹서 확장"
+    "locales": {
+      "en-US": {
+        "content": "FFmpeg demuxer extension for media stream separation in TEN Framework"
+      },
+      "zh-CN": {
+        "content": "TEN Framework 中用于媒体流分离的 FFmpeg 解复用器扩展"
+      },
+      "zh-TW": {
+        "content": "TEN Framework 中用於媒體串流分離的 FFmpeg 解多工器擴充"
+      },
+      "ja-JP": {
+        "content": "TEN Frameworkでのメディアストリーム分離用FFmpegデマルチプレクサ拡張"
+      },
+      "ko-KR": {
+        "content": "TEN Framework의 미디어 스트림 분리를 위한 FFmpeg 디먹서 확장"
+      }
+    }
   },
   "tags": [
     "cpp"
