--- a/packages/example_extensions/ffmpeg_muxer/manifest.json
+++ b/packages/example_extensions/ffmpeg_muxer/manifest.json
@@ -3,18 +3,42 @@
   "name": "ffmpeg_muxer",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "FFmpeg Muxer Extension",
-    "zh-CN": "FFmpeg 复用器扩展",
-    "zh-TW": "FFmpeg 多工器擴充",
-    "ja-JP": "FFmpeg マルチプレクサ拡張",
-    "ko-KR": "FFmpeg 먹서 확장"
+    "locales": {
+      "en-US": {
+        "content": "FFmpeg Muxer Extension"
+      },
+      "zh-CN": {
+        "content": "FFmpeg 复用器扩展"
+      },
+      "zh-TW": {
+        "content": "FFmpeg 多工器擴充"
+      },
+      "ja-JP": {
+        "content": "FFmpeg マルチプレクサ拡張"
+      },
+      "ko-KR": {
+        "content": "FFmpeg 먹서 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "FFmpeg muxer extension for media stream combination in TEN Framework",
-    "zh-CN": "TEN Framework 中用于媒体流合并的 FFmpeg 复用器扩展",
-    "zh-TW": "TEN Framework 中用於媒體串流合併的 FFmpeg 多工器擴充",
-    "ja-JP": "TEN Frameworkでのメディアストリーム結合用FFmpegマルチプレクサ拡張",
-    "ko-KR": "TEN Framework의 미디어 스트림 결합을 위한 FFmpeg 먹서 확장"
+    "locales": {
+      "en-US": {
+        "content": "FFmpeg muxer extension for media stream combination in TEN Framework"
+      },
+      "zh-CN": {
+        "content": "TEN Framework 中用于媒体流合并的 FFmpeg 复用器扩展"
+      },
+      "zh-TW": {
+        "content": "TEN Framework 中用於媒體串流合併的 FFmpeg 多工器擴充"
+      },
+      "ja-JP": {
+        "content": "TEN Frameworkでのメディアストリーム結合用FFmpegマルチプレクサ拡張"
+      },
+      "ko-KR": {
+        "content": "TEN Framework의 미디어 스트림 결합을 위한 FFmpeg 먹서 확장"
+      }
+    }
   },
   "tags": [
     "cpp"
