--- a/packages/example_extensions/ollama_python/manifest.json
+++ b/packages/example_extensions/ollama_python/manifest.json
@@ -3,18 +3,42 @@
   "name": "ollama_python",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Ollama Python Extension",
-    "zh-CN": "Ollama Python 扩展",
-    "zh-TW": "Ollama Python 擴充",
-    "ja-JP": "Ollama Python 拡張",
-    "ko-KR": "Ollama Python 확장"
+    "locales": {
+      "en-US": {
+        "content": "Ollama Python Extension"
+      },
+      "zh-CN": {
+        "content": "Ollama Python 扩展"
+      },
+      "zh-TW": {
+        "content": "Ollama Python 擴充"
+      },
+      "ja-JP": {
+        "content": "Ollama Python 拡張"
+      },
+      "ko-KR": {
+        "content": "Ollama Python 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "Ollama integration extension example written in Python for TEN Framework",
-    "zh-CN": "使用 Python 语言编写的 TEN Framework Ollama 集成扩展示例",
-    "zh-TW": "使用 Python 語言編寫的 TEN Framework Ollama 整合擴充範例",
-    "ja-JP": "TEN Framework用のPythonで書かれたOllama統合拡張サンプル",
-    "ko-KR": "TEN Framework용 Python으로 작성된 Ollama 통합 확장 예제"
+    "locales": {
+      "en-US": {
+        "content": "Ollama integration extension example written in Python for TEN Framework"
+      },
+      "zh-CN": {
+        "content": "使用 Python 语言编写的 TEN Framework Ollama 集成扩展示例"
+      },
+      "zh-TW": {
+        "content": "使用 Python 語言編寫的 TEN Framework Ollama 整合擴充範例"
+      },
+      "ja-JP": {
+        "content": "TEN Framework用のPythonで書かれたOllama統合拡張サンプル"
+      },
+      "ko-KR": {
+        "content": "TEN Framework용 Python으로 작성된 Ollama 통합 확장 예제"
+      }
+    }
   },
   "tags": [
     "python"
