--- a/packages/example_extensions/simple_http_server_cpp/manifest.json
+++ b/packages/example_extensions/simple_http_server_cpp/manifest.json
@@ -3,18 +3,42 @@
   "name": "simple_http_server_cpp",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Simple HTTP Server C++ Extension",
-    "zh-CN": "简单 HTTP 服务器 C++ 扩展",
-    "zh-TW": "簡單 HTTP 伺服器 C++ 擴充",
-    "ja-JP": "シンプル HTTP サーバー C++ 拡張",
-    "ko-KR": "간단한 HTTP 서버 C++ 확장"
+    "locales": {
+      "en-US": {
+        "content": "Simple HTTP Server C++ Extension"
+      },
+      "zh-CN": {
+        "content": "简单 HTTP 服务器 C++ 扩展"
+      },
+      "zh-TW": {
+        "content": "簡單 HTTP 伺服器 C++ 擴充"
+      },
+      "ja-JP": {
+        "content": "シンプル HTTP サーバー C++ 拡張"
+      },
+      "ko-KR": {
+        "content": "간단한 HTTP 서버 C++ 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "Simple HTTP server extension example written in C++ for TEN Framework",
-    "zh-CN": "使用 C++ 语言编写的 TEN Framework 简单 HTTP 服务器扩展示例",
-    "zh-TW": "使用 C++ 語言編寫的 TEN Framework 簡單 HTTP 伺服器擴充範例",
-    "ja-JP": "TEN Framework用のC++で書かれたシンプルなHTTPサーバー拡張サンプル",
-    "ko-KR": "TEN Framework용 C++로 작성된 간단한 HTTP 서버 확장 예제"
+    "locales": {
+      "en-US": {
+        "content": "Simple HTTP server extension example written in C++ for TEN Framework"
+      },
+      "zh-CN": {
+        "content": "使用 C++ 语言编写的 TEN Framework 简单 HTTP 服务器扩展示例"
+      },
+      "zh-TW": {
+        "content": "使用 C++ 語言編寫的 TEN Framework 簡單 HTTP 伺服器擴充範例"
+      },
+      "ja-JP": {
+        "content": "TEN Framework用のC++で書かれたシンプルなHTTPサーバー拡張サンプル"
+      },
+      "ko-KR": {
+        "content": "TEN Framework용 C++로 작성된 간단한 HTTP 서버 확장 예제"
+      }
+    }
   },
   "tags": [
     "cpp"
