--- a/packages/example_extensions/websocket_server_python/manifest.json
+++ b/packages/example_extensions/websocket_server_python/manifest.json
@@ -3,18 +3,42 @@
   "name": "websocket_server_python",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "WebSocket Server Python Extension",
-    "zh-CN": "WebSocket 服务器 Python 扩展",
-    "zh-TW": "WebSocket 伺服器 Python 擴充",
-    "ja-JP": "WebSocket サーバー Python 拡張",
-    "ko-KR": "WebSocket 서버 Python 확장"
+    "locales": {
+      "en-US": {
+        "content": "WebSocket Server Python Extension"
+      },
+      "zh-CN": {
+        "content": "WebSocket 服务器 Python 扩展"
+      },
+      "zh-TW": {
+        "content": "WebSocket 伺服器 Python 擴充"
+      },
+      "ja-JP": {
+        "content": "WebSocket サーバー Python 拡張"
+      },
+      "ko-KR": {
+        "content": "WebSocket 서버 Python 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "WebSocket server extension example written in Python for TEN Framework",
-    "zh-CN": "使用 Python 语言编写的 TEN Framework WebSocket 服务器扩展示例",
-    "zh-TW": "使用 Python 語言編寫的 TEN Framework WebSocket 伺服器擴充範例",
-    "ja-JP": "TEN Framework用のPythonで書かれたWebSocketサーバー拡張サンプル",
-    "ko-KR": "TEN Framework용 Python으로 작성된 WebSocket 서버 확장 예제"
+    "locales": {
+      "en-US": {
+        "content": "WebSocket server extension example written in Python for TEN Framework"
+      },
+      "zh-CN": {
+        "content": "使用 Python 语言编写的 TEN Framework WebSocket 服务器扩展示例"
+      },
+      "zh-TW": {
+        "content": "使用 Python 語言編寫的 TEN Framework WebSocket 伺服器擴充範例"
+      },
+      "ja-JP": {
+        "content": "TEN Framework用のPythonで書かれたWebSocketサーバー拡張サンプル"
+      },
+      "ko-KR": {
+        "content": "TEN Framework용 Python으로 작성된 WebSocket 서버 확장 예제"
+      }
+    }
   },
   "tags": [
     "python"
