--- a/packages/core_apps/default_app_go/manifest.json
+++ b/packages/core_apps/default_app_go/manifest.json
@@ -3,18 +3,42 @@
   "name": "default_app_go",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Default Go App",
-    "zh-CN": "默认 Go 应用",
-    "zh-TW": "預設 Go 應用程式",
-    "ja-JP": "デフォルト Go アプリ",
-    "ko-KR": "기본 Go 앱"
+    "locales": {
+      "en-US": {
+        "content": "Default Go App"
+      },
+      "zh-CN": {
+        "content": "默认 Go 应用"
+      },
+      "zh-TW": {
+        "content": "預設 Go 應用程式"
+      },
+      "ja-JP": {
+        "content": "デフォルト Go アプリ"
+      },
+      "ko-KR": {
+        "content": "기본 Go 앱"
+      }
+    }
   },
   "description": {
-    "en-US": "Default TEN Framework application template written in Go",
-    "zh-CN": "使用 Go 语言编写的默认 TEN Framework 应用模板",
-    "zh-TW": "使用 Go 語言編寫的預設 TEN Framework 應用程式模板",
-    "ja-JP": "Goで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート",
-    "ko-KR": "Go로 작성된 기본 TEN Framework 애플리케이션 템플릿"
+    "locales": {
+      "en-US": {
+        "content": "Default TEN Framework application template written in Go"
+      },
+      "zh-CN": {
+        "content": "使用 Go 语言编写的默认 TEN Framework 应用模板"
+      },
+      "zh-TW": {
+        "content": "使用 Go 語言編寫的預設 TEN Framework 應用程式模板"
+      },
+      "ja-JP": {
+        "content": "Goで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート"
+      },
+      "ko-KR": {
+        "content": "Go로 작성된 기본 TEN Framework 애플리케이션 템플릿"
+      }
+    }
   },
   "tags": [
     "go",
