--- a/packages/core_apps/default_app_nodejs/manifest.json
+++ b/packages/core_apps/default_app_nodejs/manifest.json
@@ -3,18 +3,42 @@
   "name": "default_app_nodejs",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Default Node.js App",
-    "zh-CN": "默认 Node.js 应用",
-    "zh-TW": "預設 Node.js 應用程式",
-    "ja-JP": "デフォルト Node.js アプリ",
-    "ko-KR": "기본 Node.js 앱"
+    "locales": {
+      "en-US": {
+        "content": "Default Node.js App"
+      },
+      "zh-CN": {
+        "content": "默认 Node.js 应用"
+      },
+      "zh-TW": {
+        "content": "預設 Node.js 應用程式"
+      },
+      "ja-JP": {
+        "content": "デフォルト Node.js アプリ"
+      },
+      "ko-KR": {
+        "content": "기본 Node.js 앱"
+      }
+    }
   },
   "description": {
-    "en-US": "Default TEN Framework application template written in Node.js",
-    "zh-CN": "使用 Node.js 语言编写的默认 TEN Framework 应用模板",
-    "zh-TW": "使用 Node.js 語言編寫的預設 TEN Framework 應用程式模板",
-    "ja-JP": "Node.jsで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート",
-    "ko-KR": "Node.js로 작성된 기본 TEN Framework 애플리케이션 템플릿"
+    "locales": {
+      "en-US": {
+        "content": "Default TEN Framework application template written in Node.js"
+      },
+      "zh-CN": {
+        "content": "使用 Node.js 语言编写的默认 TEN Framework 应用模板"
+      },
+      "zh-TW": {
+        "content": "使用 Node.js 語言編寫的預設 TEN Framework 應用程式模板"
+      },
+      "ja-JP": {
+        "content": "Node.jsで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート"
+      },
+      "ko-KR": {
+        "content": "Node.js로 작성된 기본 TEN Framework 애플리케이션 템플릿"
+      }
+    }
   },
   "tags": [
     "nodejs",
