--- a/packages/core_apps/default_app_python/manifest.json
+++ b/packages/core_apps/default_app_python/manifest.json
@@ -3,18 +3,42 @@
   "name": "default_app_python",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Default Python App",
-    "zh-CN": "默认 Python 应用",
-    "zh-TW": "預設 Python 應用程式",
-    "ja-JP": "デフォルト Python アプリ",
-    "ko-KR": "기본 Python 앱"
+    "locales": {
+      "en-US": {
+        "content": "Default Python App"
+      },
+      "zh-CN": {
+        "content": "默认 Python 应用"
+      },
+      "zh-TW": {
+        "content": "預設 Python 應用程式"
+      },
+      "ja-JP": {
+        "content": "デフォルト Python アプリ"
+      },
+      "ko-KR": {
+        "content": "기본 Python 앱"
+      }
+    }
   },
   "description": {
-    "en-US": "Default TEN Framework application template written in Python",
-    "zh-CN": "使用 Python 语言编写的默认 TEN Framework 应用模板",
-    "zh-TW": "使用 Python 語言編寫的預設 TEN Framework 應用程式模板",
-    "ja-JP": "Pythonで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート",
-    "ko-KR": "Python으로 작성된 기본 TEN Framework 애플리케이션 템플릿"
+    "locales": {
+      "en-US": {
+        "content": "Default TEN Framework application template written in Python"
+      },
+      "zh-CN": {
+        "content": "使用 Python 语言编写的默认 TEN Framework 应用模板"
+      },
+      "zh-TW": {
+        "content": "使用 Python 語言編寫的預設 TEN Framework 應用程式模板"
+      },
+      "ja-JP": {
+        "content": "Pythonで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート"
+      },
+      "ko-KR": {
+        "content": "Python으로 작성된 기본 TEN Framework 애플리케이션 템플릿"
+      }
+    }
   },
   "tags": [
     "python",
