--- a/packages/core_extensions/default_async_extension_python/manifest.json
+++ b/packages/core_extensions/default_async_extension_python/manifest.json
@@ -3,18 +3,42 @@
   "name": "default_async_extension_python",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Default Async Python Extension",
-    "zh-CN": "默认异步 Python 扩展",
-    "zh-TW": "預設非同步 Python 擴充",
-    "ja-JP": "デフォルト非同期 Python 拡張",
-    "ko-KR": "기본 비동기 Python 확장"
+    "locales": {
+      "en-US": {
+        "content": "Default Async Python Extension"
+      },
+      "zh-CN": {
+        "content": "默认异步 Python 扩展"
+      },
+      "zh-TW": {
+        "content": "預設非同步 Python 擴充"
+      },
+      "ja-JP": {
+        "content": "デフォルト非同期 Python 拡張"
+      },
+      "ko-KR": {
+        "content": "기본 비동기 Python 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "Default TEN Framework asynchronous extension template written in Python",
-    "zh-CN": "使用 Python 语言编写的默认 TEN Framework 异步扩展模板",
-    "zh-TW": "使用 Python 語言編寫的預設 TEN Framework 非同步擴充模板",
-    "ja-JP": "Pythonで書かれたデフォルトのTEN Framework非同期拡張テンプレート",
-    "ko-KR": "Python으로 작성된 기본 TEN Framework 비동기 확장 템플릿"
+    "locales": {
+      "en-US": {
+        "content": "Default TEN Framework asynchronous extension template written in Python"
+      },
+      "zh-CN": {
+        "content": "使用 Python 语言编写的默认 TEN Framework 异步扩展模板"
+      },
+      "zh-TW": {
+        "content": "使用 Python 語言編寫的預設 TEN Framework 非同步擴充模板"
+      },
+      "ja-JP": {
+        "content": "Pythonで書かれたデフォルトのTEN Framework非同期拡張テンプレート"
+      },
+      "ko-KR": {
+        "content": "Python으로 작성된 기본 TEN Framework 비동기 확장 템플릿"
+      }
+    }
   },
   "tags": [
     "python",
