--- a/packages/example_extensions/http_server_extension_nodejs/manifest.json
+++ b/packages/example_extensions/http_server_extension_nodejs/manifest.json
@@ -3,18 +3,42 @@
   "name": "http_server_extension_nodejs",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "HTTP Server Node.js Extension",
-    "zh-CN": "HTTP 服务器 Node.js 扩展",
-    "zh-TW": "HTTP 伺服器 Node.js 擴充",
-    "ja-JP": "HTTP サーバー Node.js 拡張",
-    "ko-KR": "HTTP 서버 Node.js 확장"
+    "locales": {
+      "en-US": {
+        "content": "HTTP Server Node.js Extension"
+      },
+      "zh-CN": {
+        "content": "HTTP 服务器 Node.js 扩展"
+      },
+      "zh-TW": {
+        "content": "HTTP 伺服器 Node.js 擴充"
+      },
+      "ja-JP": {
+        "content": "HTTP サーバー Node.js 拡張"
+      },
+      "ko-KR": {
+        "content": "HTTP 서버 Node.js 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "HTTP server extension example written in Node.js for TEN Framework",
-    "zh-CN": "使用 Node.js 语言编写的 TEN Framework HTTP 服务器扩展示例",
-    "zh-TW": "使用 Node.js 語言編寫的 TEN Framework HTTP 伺服器擴充範例",
-    "ja-JP": "TEN Framework用のNode.jsで書かれたHTTPサーバー拡張サンプル",
-    "ko-KR": "TEN Framework용 Node.js로 작성된 HTTP 서버 확장 예제"
+    "locales": {
+      "en-US": {
+        "content": "HTTP server extension example written in Node.js for TEN Framework"
+      },
+      "zh-CN": {
+        "content": "使用 Node.js 语言编写的 TEN Framework HTTP 服务器扩展示例"
+      },
+      "zh-TW": {
+        "content": "使用 Node.js 語言編寫的 TEN Framework HTTP 伺服器擴充範例"
+      },
+      "ja-JP": {
+        "content": "TEN Framework用のNode.jsで書かれたHTTPサーバー拡張サンプル"
+      },
+      "ko-KR": {
+        "content": "TEN Framework용 Node.js로 작성된 HTTP 서버 확장 예제"
+      }
+    }
   },
   "tags": [
     "nodejs"
