--- a/packages/example_extensions/simple_echo_cpp/manifest.json
+++ b/packages/example_extensions/simple_echo_cpp/manifest.json
@@ -3,18 +3,42 @@
   "name": "simple_echo_cpp",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Simple Echo C++ Extension",
-    "zh-CN": "简单回声 C++ 扩展",
-    "zh-TW": "簡單回聲 C++ 擴充",
-    "ja-JP": "シンプルエコー C++ 拡張",
-    "ko-KR": "간단한 에코 C++ 확장"
+    "locales": {
+      "en-US": {
+        "content": "Simple Echo C++ Extension"
+      },
+      "zh-CN": {
+        "content": "简单回声 C++ 扩展"
+      },
+      "zh-TW": {
+        "content": "簡單回聲 C++ 擴充"
+      },
+      "ja-JP": {
+        "content": "シンプルエコー C++ 拡張"
+      },
+      "ko-KR": {
+        "content": "간단한 에코 C++ 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "Simple echo extension example written in C++ for TEN Framework",
-    "zh-CN": "使用 C++ 语言编写的 TEN Framework 简单回声扩展示例",
-    "zh-TW": "使用 C++ 語言編寫的 TEN Framework 簡單回聲擴充範例",
-    "ja-JP": "TEN Framework用のC++で書かれたシンプルなエコー拡張サンプル",
-    "ko-KR": "TEN Framework용 C++로 작성된 간단한 에코 확장 예제"
+    "locales": {
+      "en-US": {
+        "content": "Simple echo extension example written in C++ for TEN Framework"
+      },
+      "zh-CN": {
+        "content": "使用 C++ 语言编写的 TEN Framework 简单回声扩展示例"
+      },
+      "zh-TW": {
+        "content": "使用 C++ 語言編寫的 TEN Framework 簡單回聲擴充範例"
+      },
+      "ja-JP": {
+        "content": "TEN Framework用のC++で書かれたシンプルなエコー拡張サンプル"
+      },
+      "ko-KR": {
+        "content": "TEN Framework용 C++로 작성된 간단한 에코 확장 예제"
+      }
+    }
   },
   "tags": [
     "cpp"
