--- a/packages/example_extensions/simple_echo_python/manifest.json
+++ b/packages/example_extensions/simple_echo_python/manifest.json
@@ -3,18 +3,42 @@
   "name": "simple_echo_python",
   "version": "0.10.16",
   "display_name": {
-    "en-US": "Simple Echo Python Extension",
-    "zh-CN": "简单回声 Python 扩展",
-    "zh-TW": "簡單回聲 Python 擴充",
-    "ja-JP": "シンプルエコー Python 拡張",
-    "ko-KR": "간단한 에코 Python 확장"
+    "locales": {
+      "en-US": {
+        "content": "Simple Echo Python Extension"
+      },
+      "zh-CN": {
+        "content": "简单回声 Python 扩展"
+      },
+      "zh-TW": {
+        "content": "簡單回聲 Python 擴充"
+      },
+      "ja-JP": {
+        "content": "シンプルエコー Python 拡張"
+      },
+      "ko-KR": {
+        "content": "간단한 에코 Python 확장"
+      }
+    }
   },
   "description": {
-    "en-US": "Simple echo extension example written in Python for TEN Framework",
-    "zh-CN": "使用 Python 语言编写的 TEN Framework 简单回声扩展示例",
-    "zh-TW": "使用 Python 語言編寫的 TEN Framework 簡單回聲擴充範例",
-    "ja-JP": "TEN Framework用のPythonで書かれたシンプルなエコー拡張サンプル",
-    "ko-KR": "TEN Framework용 Python으로 작성된 간단한 에코 확장 예제"
+    "locales": {
+      "en-US": {
+        "content": "Simple echo extension example written in Python for TEN Framework"
+      },
+      "zh-CN": {
+        "content": "使用 Python 语言编写的 TEN Framework 简单回声扩展示例"
+      },
+      "zh-TW": {
+        "content": "使用 Python 語言編寫的 TEN Framework 簡單回聲擴充範例"
+      },
+      "ja-JP": {
+        "content": "TEN Framework用のPythonで書かれたシンプルなエコー拡張サンプル"
+      },
+      "ko-KR": {
+        "content": "TEN Framework용 Python으로 작성된 간단한 에코 확장 예제"
+      }
+    }
   },
   "tags": [
     "python"
