--- a/core/src/ten_manager/designer_frontend/package.json
+++ b/core/src/ten_manager/designer_frontend/package.json
@@ -35,8 +35,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tanstack/react-query": "^5.80.6",
-    "@tanstack/react-query-devtools": "^5.80.6",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.81.2",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-window": "^1.8.8",
     "@xterm/addon-attach": "^0.11.0",
@@ -59,51 +59,50 @@
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.511.0",
     "monaco-editor": "^0.52.2",
-    "motion": "^12.17.0",
+    "motion": "^12.18.1",
     "next-themes": "^0.4.6",
     "pino": "^9.7.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.57.0",
-    "react-i18next": "^15.5.2",
+    "react-hook-form": "^7.58.1",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
-    "recharts": "^2.15.3",
+    "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "trulience-sdk": "https://trulience.com/release/prod/latest/trulience-sdk.tar.gz",
-    "zod": "^3.25.61",
+    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "@playwright/test": "^1.53.0",
-    "@tailwindcss/postcss": "^4.1.9",
-    "@tanstack/eslint-plugin-query": "^5.78.0",
+    "@biomejs/biome": "2.0.5",
+    "@eslint/js": "^9.29.0",
+    "@playwright/test": "^1.53.1",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/dagre": "^0.7.52",
-    "@types/node": "^22.15.31",
+    "@types/node": "^22.15.32",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "esbuild": "^0.24.2",
-    "eslint": "^9.28.0",
+    "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "pino-pretty": "^13.0.0",
-    "playwright": "^1.53.0",
-    "postcss": "^8.5.4",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "tailwindcss": "^4.1.9",
+    "playwright": "^1.53.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
     "typescript": "~5.7.3",
-    "typescript-eslint": "^8.34.0",
+    "typescript-eslint": "^8.34.1",
     "vite": "^6.3.5",
     "vite-plugin-node-polyfills": "^0.23.0"
   }
