--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@biomejs/biome": "2.0.5",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.29",
     "eslint": "^9.28.0",
