--- a/ai_agents/agents/examples/voice-assistant/manifest.json
+++ b/ai_agents/agents/examples/voice-assistant/manifest.json
@@ -19,7 +19,9 @@
       "version": "1.38.0"
     },
     {
-      "path": "/tmp/ten_ai_base"
+      "type": "system",
+      "name": "ten_ai_base",
+      "version": "=0.6.26"
     },
     {
       "type": "extension",
