feat: add lint-extension task

--- a/ai_agents/Taskfile.yml
+++ b/ai_agents/Taskfile.yml
@@ -14,10 +14,19 @@ tasks:
     cmds:
       - ./agents/scripts/pylint.sh
 
+  lint-extension:
+    desc: lint a single python extension under agents/ten_packages/extension
+    vars:
+      EXTENSION: '{{.EXTENSION| default "azure_asr_python"}}'
+    env:
+      PYTHONPATH: "./agents/ten_packages/system/ten_runtime_python/lib:./agents/ten_packages/system/ten_runtime_python/interface:./agents/ten_packages/system/ten_ai_base/interface"
+    cmds:
+      - ./agents/scripts/pylint.sh {{.EXTENSION}}
+
   install-tools:
     desc: install tools
     cmds:
-      - pip install pylint
+      - pip install pylint pylint-exit
 
   build:
     desc: build
