--- a/ai_agents/agents/examples/voice-assistant-realtime/main_python/manifest.json
+++ b/ai_agents/agents/examples/voice-assistant-realtime/main_python/manifest.json
@@ -9,7 +9,9 @@
       "version": "0.10"
     },
     {
-      "path": "/tmp/ten_ai_base"
+      "type": "system",
+      "name": "ten_ai_base",
+      "version": "=0.6.26"
     }
   ],
   "package": {
