--- a/ai_agents/Taskfile.yml
+++ b/ai_agents/Taskfile.yml
@@ -41,7 +41,7 @@ tasks:
     cmds:
       - ln -sf {{.USER_WORKING_DIR}}/{{.AGENT}}/manifest.json ./agents/
       - ln -sf {{.USER_WORKING_DIR}}/{{.AGENT}}/property.json ./agents/
-      - ln -sf {{.USER_WORKING_DIR}}/{{.AGENT}}/main_python ./agents/ten_packages/extension/
+      - find "{{.USER_WORKING_DIR}}/{{.AGENT}}/ten_packages/extension" -mindepth 1 -maxdepth 1 -type d -exec ln -sf -t ./agents/ten_packages/extension {} +
       - task: build
 
   run-server:
