--- a/ai_agents/Taskfile.yml
+++ b/ai_agents/Taskfile.yml
@@ -79,7 +79,7 @@ tasks:
     dir: ./agents
     internal: true
     cmds:
-      - rm -rf manifest.json property.json manifest-lock.json bin/main bin/worker out .release ten_packages/system ten_packages/system/agora_rtc_sdk ten_packages/system/azure_speech_sdk ten_packages/system/nlohmann_json ten_packages/extension/agora_rtc ten_packages/extension/agora_rtm ten_packages/extension/agora_sess_ctrl ten_packages/extension/azure_tts ten_packages/addon_loader ten_packages/extension/main_python
+      - rm -rf manifest.json property.json manifest-lock.json bin/main bin/worker out .release ten_packages/system ten_packages/system/agora_rtc_sdk ten_packages/system/azure_speech_sdk ten_packages/system/nlohmann_json ten_packages/extension/agora_rtc ten_packages/extension/agora_rtm ten_packages/extension/agora_sess_ctrl ten_packages/extension/azure_tts ten_packages/addon_loader ten_packages/extension/main_python ten_packages/extension/main_cascade_python ten_packages/extension/main_realtime_python
       - find . -type d -name .pytest_cache -exec rm -rf {} \; || true
       - find . -type d -name __pycache__ -exec rm -rf {} \; || true
       - find . -type d -name .ten -exec rm -rf {} \; || true
